Fix scrollbars from canvas element, replace Projects with Elsewhere for now.

--- a/css/main.styl
+++ b/css/main.styl
@@ -26,6 +26,9 @@ clearfix()
     font-weight: normal
     font-style: normal
 
+*
+    box-sizing: border-box
+
 p
     line-height: 1.4
     margin: 0 0 1.4em
@@ -42,17 +45,17 @@ body
     color: #334
     background: $green
     margin:0
-    box-sizing: border-box
     -webkit-font-smoothing: antialiased
 
 // Main site sidebar:
 body > header
-    width: 300px
+    width: 340px
     height: 100%
     padding: 20px
     background: #fff
     opacity: 0.9
     position: absolute
+    z-index: 10
     left: 0
     box-shadow: 0 0 10px rgba(0,0,0,0.4)
 
@@ -111,3 +114,12 @@ body > header
     content: "\23"
 .github:before
     content: "\24"
+
+// Prevent the homepage canvas from introducing scrollbars
+.hp_canvas_wrap
+    height: 100%
+    width: 100%
+    position: absolute
+    top: 0
+    left: 0
+    overflow: hidden
